--- a/app/src/main/res/layout/fragment_profile_coupons.xml
+++ b/app/src/main/res/layout/fragment_profile_coupons.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Meus Cupons"
+        android:text="Cupons e Descontos"
         android:textColor="#181725"
         android:textSize="24sp"
         android:fontFamily="@font/gilroybold"
@@ -32,7 +32,7 @@
         android:id="@+id/textEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nenhum cupom disponível"
+        android:text="Nenhum cupom disponível no momento"
         android:textColor="#7C7C7C"
         android:textSize="16sp"
         android:fontFamily="@font/gilroyregular"
