--- a/app/src/main/res/layout/fragment_profile_notifications.xml
+++ b/app/src/main/res/layout/fragment_profile_notifications.xml
@@ -32,7 +32,7 @@
         android:id="@+id/textEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nenhuma notificação"
+        android:text="Nenhuma notificação no momento"
         android:textColor="#7C7C7C"
         android:textSize="16sp"
         android:fontFamily="@font/gilroyregular"
