--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -83,12 +83,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/subcategoriesRecycler"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:paddingHorizontal="16dp"
             android:clipToPadding="false"
-            android:orientation="horizontal" />
+            android:orientation="horizontal"
+            android:paddingHorizontal="16dp" />
 
         <!-- Exclusive Offers Section -->
         <LinearLayout
