--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,4 +75,24 @@
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/gilroymedium</item>
     </style>
+
+    <!-- Filter CheckBox Style -->
+    <style name="FilterCheckBox" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:button">@drawable/selector_filter_checkbox</item>
+        <item name="android:textColor">#181725</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/gilroy</item>
+    </style>
+
+    <!-- Filter Button Background -->
+    <style name="FilterButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/bg_filter_button</item>
+        <item name="android:textColor">#FFF9FF</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/gilroy</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
