--- a/app/src/main/res/layout/fragment_profile_orders.xml
+++ b/app/src/main/res/layout/fragment_profile_orders.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@id/textTitle" />
 
     <TextView
-        android:id="@+id/textEmpty"
+        android:id="@+id/textEmptyOrders"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nenhum pedido encontrado"
